# DB-Poultry

./: .gitignore  CONTRIBUTING  CONTRIBUTING.md  README.md  gradle.properties  index.html  make.c  perf.ps1  settings.gradle.kts  testicle.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request.md
.github/workflows/: gradle.yml  main.yml
app/: .env  build.gradle.kts
app/src/perf/: README.md  main.py  pyproject.toml
app/src/perf/generate_dummies/: flock_details.py  flocks.py  util.py
classes/: org.db_poultry.db.flockDAO.CreateFlockTest.html  org.db_poultry.db.flockDAO.DeleteFlockTest.html  org.db_poultry.db.flockDAO.ReadFlockTest.html  org.db_poultry.db.flockDetailsDAO.CreateFlockDetailsTest.html  org.db_poultry.db.flockDetailsDAO.DeleteFlockDetailTest.html  org.db_poultry.db.flockDetailsDAO.ReadFlockDetailsTest.html  org.db_poultry.db.reportDAO.ReadMortalityRateTest.html  org.db_poultry.db.supplyRecordDAO.CreateSupplyRecordTest.html  org.db_poultry.db.supplyRecordDAO.DeleteSupplyRecordTest.html  org.db_poultry.db.supplyRecordDAO.ReadSupplyRecordTest.html  org.db_poultry.db.supplyTypeDAO.CreateSupplyTypeTest.html  org.db_poultry.db.supplyTypeDAO.DeleteSupplyTypeTest.html  org.db_poultry.db.supplyTypeDAO.ReadSupplyTypeTest.html
database/: ManageInventory.java  README.md
database/diagrams/: erd.md  erd.mmd
database/sql/: coop.sql  flock.sql  inventory.sql
docs/: errors.md  shipping.md
docs/contributing/: docker.md  explore_test.md  ppsp.md  programming.md  resources.md  testing.md
docs/workflow/: 1 Backlogging.md  (+6 more)
(+288 files in other folders)
